--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,62 @@
-.window {
-  width: 200px;
-  height: 200px;
-  background-color: black;
-  font-weight: 100;
+body {
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  width: fit-content;
+  margin-top: 10;
+  margin-left: 10;
+  margin-right: 10;
 }
 
-/* The switch - the box around the slider */
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  color: #333333;
+}
+
+p {
+  color: #555555;
+}
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #555555;
+}
+
+button,
+input {
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 10px;
+  background-color: #bebebe;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover,
+input:hover {
+  transform: translateY(-1px);
+}
+
+button:focus,
+input:focus {
+  outline: none;
+}
+
 .switch {
   position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 17px;
+  width: 40px;
+  height: 22px;
 }
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -29,41 +65,26 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
+  border-radius: 34px;
 }
 
 .slider:before {
   position: absolute;
   content: '';
-  height: 13px;
-  width: 13px;
-  left: 2px;
+  height: 17px;
+  width: 17px;
+  left: 3px;
   bottom: 2px;
   background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #2196f3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196f3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(13px);
-  -ms-transform: translateX(13px);
-  transform: translateX(13px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 17px;
-}
-
-.slider.round:before {
+  transition: 0.3s;
   border-radius: 50%;
+}
+
+input[type='checkbox']:checked + .slider {
+  background-color: rgb(64, 64, 226);
+}
+
+input[type='checkbox']:checked + .slider:before {
+  transform: translateX(17px);
 }
